--- a/src/css/blog/Reader/_reader.scss
+++ b/src/css/blog/Reader/_reader.scss
@@ -28,6 +28,25 @@
       display: flex;
       flex-direction: column;
 
+      &__navigation {
+        @include border(pink);
+        width: 100px;
+        height: 50px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        button {
+          background: none;
+          outline: none;
+          border: none;
+          color: grey;
+          cursor: pointer;
+          &:hover, &:focus {
+            color: lighten(grey, 10%);
+          }
+        }
+      }
       h1 {
         font-size: 3rem;
       }
@@ -39,7 +58,9 @@
     }
   }
 
-  &__main {
+  &__relatedArticles {
+    @include border(red);
+    margin-top: 100px;
     &__body {
       width: 99vw;
       height: fit-content;
@@ -56,7 +77,7 @@
         height: 300px;
         top: 0px;
         margin: 40px 0;
-        border-radius: 5px;
+        border-radius: 2px;
         display: flex;
         flex-direction: column;
         box-shadow: 2px 12px 15px 1px lighten(royalblue, 40%);
