--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -733,7 +733,7 @@
       width: 100%;
       height: 290px;
       margin: 10px 0px 20px 20px;
-      border-radius: 5px;
+      border-radius: 2px;
       display: flex;
       flex-direction: column;
       box-shadow: 2px 12px 15px 1px #f1f4fd;
@@ -886,75 +886,94 @@
       padding: 1rem;
       display: flex;
       flex-direction: column; }
+      .reader__meta__desc__navigation {
+        border: 2px solid transparent;
+        width: 100px;
+        height: 50px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center; }
+        .reader__meta__desc__navigation button {
+          background: none;
+          outline: none;
+          border: none;
+          color: grey;
+          cursor: pointer; }
+          .reader__meta__desc__navigation button:hover, .reader__meta__desc__navigation button:focus {
+            color: #9a9a9a; }
       .reader__meta__desc h1 {
         font-size: 3rem; }
       .reader__meta__desc h3 {
         color: grey;
         font-weight: 100;
         margin: 2% 0; }
-  .reader__main__body {
-    width: 99vw;
-    height: fit-content;
-    padding: 1rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap-reverse;
-    position: relative;
-    border: 2px solid transparent; }
-    .reader__main__body .item {
-      position: relative;
-      width: 80%;
-      height: 300px;
-      top: 0px;
-      margin: 40px 0;
-      border-radius: 5px;
+  .reader__relatedArticles {
+    border: 2px solid transparent;
+    margin-top: 100px; }
+    .reader__relatedArticles__body {
+      width: 99vw;
+      height: fit-content;
+      padding: 1rem;
       display: flex;
-      flex-direction: column;
-      box-shadow: 2px 12px 15px 1px #f1f4fd;
-      background: #fff;
-      border-top: 5px solid #663399;
+      flex-direction: row;
+      flex-wrap: wrap-reverse;
       position: relative;
-      transition: all 1s ease-in;
-      cursor: pointer;
       border: 2px solid transparent; }
-      .reader__main__body .item:hover {
-        box-shadow: 2px 12px 15px 1px #c2d0ed; }
-      .reader__main__body .item__image {
-        height: 100px;
-        border: 2px solid transparent;
-        background: royalblue; }
-        .reader__main__body .item__image img {
-          height: inherit;
-          width: 100%; }
-      .reader__main__body .item__desc {
-        border: 2px solid transparent;
-        padding: 1rem;
-        height: 150px;
+      .reader__relatedArticles__body .item {
+        position: relative;
+        width: 80%;
+        height: 300px;
+        top: 0px;
+        margin: 40px 0;
+        border-radius: 2px;
         display: flex;
         flex-direction: column;
-        text-decoration: none;
-        justify-content: space-between; }
-        .reader__main__body .item__desc h2 {
-          word-wrap: break-word;
-          color: black;
+        box-shadow: 2px 12px 15px 1px #f1f4fd;
+        background: #fff;
+        border-top: 5px solid #663399;
+        position: relative;
+        transition: all 1s ease-in;
+        cursor: pointer;
+        border: 2px solid transparent; }
+        .reader__relatedArticles__body .item:hover {
+          box-shadow: 2px 12px 15px 1px #c2d0ed; }
+        .reader__relatedArticles__body .item__image {
+          height: 100px;
+          border: 2px solid transparent;
+          background: royalblue; }
+          .reader__relatedArticles__body .item__image img {
+            height: inherit;
+            width: 100%; }
+        .reader__relatedArticles__body .item__desc {
+          border: 2px solid transparent;
+          padding: 1rem;
+          height: 150px;
+          display: flex;
+          flex-direction: column;
           text-decoration: none;
-          border: 2px solid transparent; }
-        .reader__main__body .item__desc h3 {
-          font-size: 0.8rem;
-          text-decoration: none;
-          font-weight: 100;
-          border: 2px solid transparent; }
-      .reader__main__body .item__read__link {
-        width: inherit;
-        height: fit-content; }
-        .reader__main__body .item__read__link button {
-          background: none;
-          margin: 0 auto;
-          color: orange;
-          width: 130px;
-          border: none;
-          padding: 0.5rem;
-          cursor: pointer; }
+          justify-content: space-between; }
+          .reader__relatedArticles__body .item__desc h2 {
+            word-wrap: break-word;
+            color: black;
+            text-decoration: none;
+            border: 2px solid transparent; }
+          .reader__relatedArticles__body .item__desc h3 {
+            font-size: 0.8rem;
+            text-decoration: none;
+            font-weight: 100;
+            border: 2px solid transparent; }
+        .reader__relatedArticles__body .item__read__link {
+          width: inherit;
+          height: fit-content; }
+          .reader__relatedArticles__body .item__read__link button {
+            background: none;
+            margin: 0 auto;
+            color: orange;
+            width: 130px;
+            border: none;
+            padding: 0.5rem;
+            cursor: pointer; }
 
 .register {
   width: 100vw;
