--- a/src/css/blog/RegisterPage/_registerpage.scss
+++ b/src/css/blog/RegisterPage/_registerpage.scss
@@ -1,126 +1,120 @@
-.register {
-  width: 100vw;
-  height: fit-content;
+.sign__up {
+  width: 99vw;
+  height: 900px;
   display: flex;
-  @include flexCon(row, false, space-between);
-  background-color: linear-gradient(to right, $primary-blue, $secondary-blue);
-  @include border(cyan);
-  &__pic {
-    width: 50%;
-    height: 500px;
-    position: relative;
-    background-image: url("../../pics/Counselling.jpg");
-    clip-path: polygon(50% 100%, 100% 50%, 100% 0%, 0% 0%);
-    border: 3px solid #ffd700;
-    @include border(green);
-    animation: shapeChange 10s ease alternate 1s infinite;
-    img {
-      width: 400px;
-      height: 400px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to right, #2ac0d9, #5576c3);
+  @include border(blue);
+
+  &__header {
+    @include border(red);
+    font-size: 2rem;
+    font-weight: 100;
+    padding: 1rem;
+    background-color: #fff;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    h2 {
+      color: #00bfff;
     }
   }
-  &__forms {
+  &__form {
+    @include border(brown);
+    width: 500px;
+    height: 500px;
     display: flex;
-    height: fit-content;
-    @include flexCon(column, true, flex-start);
-    &__signIn {
-      width: 50vw;
-      height: inherit;
-      @include border(red);
-      @include flexCon(column, false, center);
+    flex-direction: column;
+    background-color: #fff;
 
-      &__header {
-        @include border(lightskyblue);
-        font-size: 1.5rem;
+    & > div {
+      @include border(pink);
+      width: inherit;
+      height: 20%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+
+      input[type="password"],
+      input[type="text"],
+      input[type="email"] {
+        height: 60px;
+        width: 90%;
         padding: 1rem;
-        width: inherit;
-        height: fit-content;
+        font-size: 1rem;
+        border: none;
+        border-bottom: 2px solid deepskyblue;
       }
-      form {
-        @include border(rebeccapurple);
-        width: 400px;
-        height: fit-content;
-        padding: 2rem;
-        label {
-          font-size: 1.4rem;
-          margin: 10px 0 10px 0;
-        }
-        input {
-          width: 300px;
-          height: 70px;
-          padding: 0.5rem;
-          border: none;
-          border-bottom: 2px solid $orange;
-          margin: 10px 0 10px 0;
-          transition: all ease 1s;
-          outline: none;
+    }
+    &__agreement {
+      @include border(blue);
+      justify-content: flex-start;
+      align-items: center;
 
-          &:focus {
-            border-bottom: 2px solid $primary-blue;
-          }
-        }
+      input {
+        width: 30px;
+        height: 30px;
+        padding-right: 1rem;
+      }
 
-        button {
-          width: 150px;
-          height: 70px;
-          color: #fff;
-          border: none;
-          cursor: pointer;
-          margin: 20px 0 10px 0;
-          border-radius: 5px;
-          background: linear-gradient(to right, $primary-blue, $otherC);
-          transition: all ease 1s;
-          display: flex;
-          align-items: center;
-          justify-content: space-evenly;
-          &:hover {
-            background: linear-gradient(to top, $otherC, $primary-blue);
-          }
+      p {
+        color: grey;
+        b {
+          color: #00bfff;
         }
       }
     }
+    &__button {
+      @include border(red);
+      justify-content: space-between;
 
-    .optionalSignUp {
-      color: #fff;
-      width: 400px;
-      height: 50px;
-      border-radius: 5px;
-      padding: 1rem;
-      height: fit-content;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-
-      .options {
-        margin: 10px 0;
-        height: 50px;
-        width: 300px;
-        padding: 1rem;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
+      button {
+        height: 60px;
+        width: 150px;
+        background: #00bfff;
         color: #fff;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        transition: all ease 0.5s;
+        border: none;
+        cursor: pointer;
+        font-size: 1.2rem;
+        box-shadow: 2px 12px 15px 1px lighten(#00bfff, 30%);
 
-        div{
-          width: fit-content;
-        }
-      }
-      &__google {
-        background: rgb(243, 11, 11);
         &:hover {
-          background: darken(rgb(243, 11, 11), 10%);
+          background: darken(#00bfff, 20%);
         }
       }
-      &__facebook {
-        background: royalblue;
-        &:hover {
-          background: darken(royalblue, 10%);
+      h4 {
+        font-weight: 100;
+        color: grey;
+        a {
+          text-decoration: none;
+          color: #00bfff;
         }
       }
+    }
+  }
+  &__optional {
+    width: 500px;
+    height: 200px;
+    background-color: #00affe;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+
+    header {
+      font-size: 1.4rem;
+      padding: 1rem;
+    }
+
+    .options {
+      width: 60%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
     }
   }
 }
