--- a/src/css/blog/RegisterPage/_registerpage.scss
+++ b/src/css/blog/RegisterPage/_registerpage.scss
@@ -65,6 +65,11 @@
         border: none;
         border-bottom: 2px solid deepskyblue;
         outline: none;
+        transition: all .3s ease-in-out;
+        &:focus {
+          border-bottom: 2px solid gold;
+          padding-left: 2rem;
+        }
       }
     }
     &__agreement {
