--- a/src/css/blog/Adminpage/_adminpage.scss
+++ b/src/css/blog/Adminpage/_adminpage.scss
@@ -1,12 +1,12 @@
 .adminPage {
-  height: 500px;
+  height: fit-content;
 
-  header {
+  &__header {
     @include border(red);
     //text-align: center;
     padding: 1rem;
     // background: $secondary-blue;
-    
+
     h2 {
       // background: $orange;
       font-size: 4rem;
@@ -21,17 +21,20 @@
 
   &__subHeaders {
     @include border(orange);
-    height: 300px;
+    height: 200px;
     header {
+      padding: 1rem;
       h3 {
         color: grey;
+        position: relative;
+        left: 100px;
       }
     }
 
     &__items {
       height: fit-content;
       @include border(red);
-      display:flex;
+      display: flex;
       flex-direction: row;
       justify-content: space-around;
       align-items: center;
@@ -43,7 +46,7 @@
         flex-direction: row;
         position: relative;
         @include border(green);
-        
+
         button {
           height: 60px;
           width: 150px;
@@ -54,14 +57,14 @@
           box-shadow: 5px 10px 20px 1px $orange;
         }
 
-        &__desc{
+        &__desc {
           // border: 1px solid red;
           margin-left: 10px;
           width: 300px;
           background: #f4f4f4;
           position: relative;
           // display: none;
-          
+
           ul {
             padding: 1rem;
             li {
@@ -69,7 +72,25 @@
             }
           }
         }
+      }
+    }
+  }
+  .buttonDisplay {
+    @include border(green);
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    
 
+    header {
+      @include border(red);
+      // width: 80%;
+      display: flex;
+      justify-content: space-between;
+      input {
+        height: 50px;
+        width: 300px;
+        margin: 5px;
       }
     }
   }
