Refactored some components

--- a/src/css/blog/Articlespage/_articlePage__body.scss
+++ b/src/css/blog/Articlespage/_articlePage__body.scss
@@ -40,7 +40,7 @@
     @include border(blue);
     color: rgb(255, 187, 0);
     text-decoration: underline;
-    // the capitalize property is used in React instead
+    // the capitalize property is used in React instead of
     // text-transform: capitalize;
   }
 }
