--- a/src/css/blog/Homepage/_counselling.scss
+++ b/src/css/blog/Homepage/_counselling.scss
@@ -170,7 +170,7 @@
             background: #fff;
             text-decoration: none;
             @include border(green);
-            transition: all 0.5s ease;
+            transition: box-shadow 0.5s ease;
 
             &:hover {
               box-shadow: 2px 12px 15px 1px lighten(#663399, 40%);
