--- a/src/css/blog/main.scss
+++ b/src/css/blog/main.scss
@@ -4,8 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  font-family: "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode",
+    Geneva, Verdana, sans-serif;
   overflow-x: hidden;
   .move-right {
     animation: moveRight 1s ease forwards infinite;
@@ -211,23 +211,18 @@ body {
   }
   @keyframes expands {
     10% {
-      transition: all 1s ease-in-out;
       transform: scale(1);
     }
     25% {
-      transition: all 1s ease-in-out;
       transform: scale(1.3);
     }
     50% {
-      transition: all 1s ease-in-out;
       transform: scale(1);
     }
     75% {
-      transition: all 1s ease-in-out;
       transform: scale(1.5);
     }
     100% {
-      transition: all 1s ease-in-out;
       transform: scale(1);
     }
   }
